css/style.css
/* ... */
    .highcharts-tooltip div.tooltipCircle .price {
      padding-left: 5px;
      font-size: 13px;
      font-weight: 300;
      line-height: 20px;
      color: var(--clr-textD); }
      .highcharts-tooltip div.tooltipCircle .price span {
        line-height: 20px;
        font-weight: 600; }
  .highcharts-tooltip span svg {
    width: 20px;
    height: 20px;
    position: relative;
    margin: 0px 3px 0px 0px;
    flex: 0 0 20px; }
  .highcharts-tooltip div.font12 {
    font-size: 12px;
    margin-bottom: -7px; }
  .highcharts-tooltip div.font10 {
    font-size: 10px;
    font-weight: 300; }
  .highcharts-tooltip .bold {
    font-weight: bold; }
  .highcharts-tooltip .light {
    font-weight: 100;
    font-size: 10px; }

.advanced .blackColor,
.advanced .blackColor span {
  color: white !important; }

.advanced .gray {
  color: #575D63; }

/* .secondTooltip {
	left: -9999px;
	position: absolute;
	transform: translateX(-50%);
	z-index: 9998;
	.tooltip {
		width: 185px;
		text-align: center;
		color: var(--clr-text-tooltip);
	}
} */
.arrow_box:after {
  top: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
  border-color: rgba(136, 183, 213, 0);
  border-width: 7px;
  margin-top: -7px; }

.arrow_box.right:after {
  left: 100%;
  border-left-color: var(--clr-back-tooltip); }

.arrow_box.left:after {
  right: 100%;
  border-right-color: var(--clr-back-tooltip); }

.lineForMainChart {
  position: absolute;
  left: -9999px;
  pointer-events: none;
  z-index: 101; }
  .lineForMainChart .circle {
    width: 11px;
    height: 11px;
    background: white;
    border: 1.2px solid var(--clr-line);
    border-radius: 50%;
    transform: translateX(-50%) translateY(-50%); }
  .lineForMainChart .line {
    background: var(--clr-line);
    width: 1px;
    height: 1px;
    margin-top: -6px;
    transform: translateX(-50%); }

.circleDiagramParent {
  display: flex;
  height: 100%;
  /*border-bottom: 1px solid var(--clr-separator);*/ }

#portfolioChartText {
  pointer-events: none;
  position: absolute;
  bottom: 10px;
  left: 10px; }
  #portfolioChartText div.portfolio-graph-info {
    display: inline-block;
    color: #00AAF8;
    padding: 0px 15px;
    text-align: center; }
    #portfolioChartText div.portfolio-graph-info span {
      font-size: 16px;
      vertical-align: top;
      line-height: 26px; }
      #portfolioChartText div.portfolio-graph-info span:nth-child(2) {
        font-size: 26px;
        line-height: initial; }
    #portfolioChartText div.portfolio-graph-info p {
      font-size: 10px;
      color: var(--clr-textD);
      margin-top: 0px;
      margin-bottom: 0; }
    #portfolioChartText div.portfolio-graph-info:first-child {
      border-right: 1px solid #e8e8e8; }
  #portfolioChartText .portfolio-graph-range {
    display: inline-block;
    z-index: 1;
    width: 70px;
    font-size: 11px;
    border-radius: 5px;
    background: transparent;
    font-weight: 600;
    margin-left: -14px; }
    #portfolioChartText .portfolio-graph-range__current {
      pointer-events: all;
      width: 100%;
      padding: 4px 0 3px 5px;
      border: 1px solid;
      border-radius: 5px;
      cursor: pointer; }
      #portfolioChartText .portfolio-graph-range__current:hover {
        background: rgba(0, 0, 0, 0.05); }
      #portfolioChartText .portfolio-graph-range__current:after {
        content: "";
        width: 0;
        height: 0;
        border-style: solid;
        border-width: 0 4px 6px;
        border-color: transparent transparent #666;
        display: block;
        position: absolute;
        margin-top: -10px;
        margin-left: 49px; }
    #portfolioChartText .portfolio-graph-range__list {
      width: 100%;
      display: block;
      margin: 0;
      padding: 0;
      visibility: hidden; }
    #portfolioChartText .portfolio-graph-range__list.open {
      visibility: visible; }
    #portfolioChartText .portfolio-graph-range__item {
      pointer-events: all;
      width: 100%;
      display: block !important;
      padding: 3px 0 3px 5px;
      cursor: pointer; }
      #portfolioChartText .portfolio-graph-range__item:hover {
        background: rgba(0, 0, 0, 0.05); }
    #portfolioChartText .portfolio-graph-range__item.active {
      background: rgba(0, 0, 0, 0.1); }

#panel-funds-account,
#panel-dashboard-liquidity {
  position: relative; }

#panel-dashboard-liquidity .liquidityText {
  color: var(--clr-textD);
  text-align: center; }
  #panel-dashboard-liquidity .liquidityText span {
    font-size: 10px;
    vertical-align: top;
    margin: 0px 5px; }
  #panel-dashboard-liquidity .liquidityText p {
    font-size: 24px;
    margin: 0;
    height: 30px; }
  #panel-dashboard-liquidity .liquidityText .leftPart,
  #panel-dashboard-liquidity .liquidityText .rightPart,
  #panel-dashboard-liquidity .liquidityText .centerPart {
    position: absolute; }
  #panel-dashboard-liquidity .liquidityText .leftPart {
    bottom: 5px;
    left: 10px;
    pointer-events: none; }
  #panel-dashboard-liquidity .liquidityText .rightPart {
    bottom: 5px;
    right: 10px;
    pointer-events: none; }
  #panel-dashboard-liquidity .liquidityText .centerPart {
    cursor: pointer;
    top: 40%;
    left: 50%;
    background: var(--clr-back-new);
    border: 1px solid var(--clr-separator);
    transform: translateX(-50%);
    height: 22px;
    width: 47px;
    border-radius: 3px; }
    #panel-dashboard-liquidity .liquidityText .centerPart p {
      margin-bottom: 0px;
      font-size: 15px;
      font-weight: bold;
      height: auto; }
    #panel-dashboard-liquidity .liquidityText .centerPart svg {
      width: 14px;
      height: 14px;
      cursor: pointer;
      fill: var(--clr-textD);
      position: relative;
      top: -4px; }
    #panel-dashboard-liquidity .liquidityText .centerPart .separator {
      width: 1px;
      height: 21px;
      background: var(--clr-separator);
      display: inline-block; }
/* ... */

